# mijia-home-mcp

./: .gitignore  README.en.md  README.md  pyproject.toml  pyproject.toml.baiduyun.uploading.cfg
.github/workflows/: ci.yml  publish.yml
src/mijia_home_mcp/: __init__.py  __init__.py.baiduyun.uploading.cfg  cli.py  client.py  config.py  guard.py  history.py  notify.py  semantics.py  server.py  update_check.py
tests/: conftest.py  test_guard.py  test_history.py  test_notify.py  test_semantics.py  test_snapshot.py  test_tools.py  test_update_check.py
