[project]
name = "mijia-home-mcp"
version = "0.4.0"
description = "米家全屋状态快照 MCP server:默认只读、一次调用获取全屋设备状态、支持变化 diff,控制能力显式开启"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "jiayunlimailutorontoca" }]
keywords = ["mcp", "mijia", "xiaomi", "smart-home", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]
dependencies = [
    "mijiaAPI>=4.1.2,<5",
    "fastmcp>=3.4,<4",
]

[project.urls]
Repository = "https://github.com/jiayunlimailutorontoca/mijia-home-mcp"
Issues = "https://github.com/jiayunlimailutorontoca/mijia-home-mcp/issues"

[project.scripts]
mijia-home-mcp = "mijia_home_mcp.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mijia_home_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
